@@ -3,7 +3,6 @@ package org.mosesidowu.smeecommerce.services;
 import com.cloudinary.Cloudinary;
 import org.mosesidowu.smeecommerce.data.models.Product;
 import org.mosesidowu.smeecommerce.data.models.ProductCategory;
-import org.mosesidowu.smeecommerce.data.models.User;
 import org.mosesidowu.smeecommerce.data.repository.ProductRepository;
 import org.mosesidowu.smeecommerce.dtos.requests.CreateProductRequest;
 import org.mosesidowu.smeecommerce.dtos.requests.ProductRequestDTO;
@@ -13,7 +12,6 @@ import org.mosesidowu.smeecommerce.exception.InvalidCategoryException;
 import org.mosesidowu.smeecommerce.exception.ItemNotFoundException;
 import org.mosesidowu.smeecommerce.exception.UnauthorizedActionException;
 import org.mosesidowu.smeecommerce.exception.UserException;
-import org.mosesidowu.smeecommerce.utils.Mapper;
 import org.mosesidowu.smeecommerce.utils.ProductMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.Authentication;
@@ -22,8 +20,12 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
+
+import static org.mosesidowu.smeecommerce.utils.ProductMapper.*;
 
 @Service
 public class ProductServiceImpl implements ProductService {
@@ -42,12 +44,16 @@ public class ProductServiceImpl implements ProductService {
             String imageUrl = uploadResult.get("url").toString();
 
             Product product = new Product();
-            ProductMapper.mapProduct(product,request);
-
             product.setProductImageUrl(imageUrl);
-            productRepository.save(product);
 
-            return ProductMapper.mapProductToResponse(product);
+            Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+            String sellerEmail = auth.getName();
+            product.setCreatedBy(sellerEmail);
+
+            Product saveProduct = mapProduct(product,request);
+            productRepository.save(saveProduct);
+
+            return mapProductToResponse(saveProduct);
         } catch (UserException | IOException e) {
             throw new UserException("Failed to upload image: " + e.getMessage());
         }
@@ -60,9 +66,9 @@ public class ProductServiceImpl implements ProductService {
         Product existingProduct = productRepository.findById(productId)
                 .orElseThrow(() -> new ItemNotFoundException("Product with ID " + productId + " not found"));
 
-        ProductMapper.updateMapperProductResponse(productDTO, existingProduct);
+         Product updateProduct = ProductMapper.updateMapperProductResponse(productDTO, existingProduct);
 
-        return productRepository.save(existingProduct);
+        return productRepository.save(updateProduct);
     }
 
 
@@ -72,7 +78,29 @@ public class ProductServiceImpl implements ProductService {
         Product product = productRepository.findById(productId)
                 .orElseThrow(() -> new ItemNotFoundException("Product with ID " + productId + " not found"));
 
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+       String currentSellerEmail  = authentication.getName();
+       if (!product.getCreatedBy().equals(currentSellerEmail )) {
+            throw new UnauthorizedActionException("You are not authorized to delete this product");
+        }
+        
         productRepository.delete(product);
+    }
+
+
+    @Override
+    public List<AllProductResponse> viewAllProducts() {
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        String currentSellerEmail  = authentication.getName();
+
+        List<Product> products = productRepository.findByCreatedBy(currentSellerEmail);
+        if (products.isEmpty()) {
+            return Collections.emptyList();
+        }
+        return products.stream()
+                .map(ProductMapper::mapToResponse)
+                .collect(Collectors.toList());
+
     }
 
 
@@ -82,25 +110,35 @@ public class ProductServiceImpl implements ProductService {
         return ProductMapper.toAllProductsResponse(products);
     }
 
-    @Override
-    public List<Product> searchProducts(String searchTerm) {
-        return productRepository.findByProductNameContainingIgnoreCaseOrProductDescriptionContainingIgnoreCase(
-                searchTerm, searchTerm);
-    }
+
 
     @Override
-    public List<Product> searchProductsByCategoryAndName(String categoryStr, String name) {
-        ProductCategory category = fromString(categoryStr);
-        return productRepository.findByProductCategoryAndProductNameContainingIgnoreCase(category, name);
-    }
+    public List<AllProductResponse> searchProducts(String searchTerm) {
 
-    @Override
-    public List<Product> viewAllProducts() {
-        List<Product> products = productRepository.findAll();
+        List<Product> products;
+        if (searchTerm == null || searchTerm.trim().isEmpty()) {
+            products = productRepository.findAll();
+        } else {
+            products = productRepository.findByProductNameContainingIgnoreCaseOrProductDescriptionContainingIgnoreCase(
+                    searchTerm.trim(), searchTerm.trim());
+        }
         return products.stream()
-                .map(ProductMapper::getProductResponse)
-                .toList();
+                .map(ProductMapper::mapToResponse)
+                .collect(Collectors.toList());
     }
+
+
+
+    @Override
+    public List<AllProductResponse> searchProductsByCategoryAndName(String categoryStr, String name) {
+        ProductCategory category = ProductMapper.safeParseCategory(categoryStr);
+        List<Product> products = productRepository.findByProductCategoryAndProductNameContainingIgnoreCase(category, name);
+        return products.stream()
+                .map(ProductMapper::mapToResponse)
+                .collect(Collectors.toList());
+    }
+
+
 
 
     public static ProductCategory fromString(String input) {
